implementação do dinamismo

--- a/psn-store/src/app/components/menu-bar/menu-bar.component.html
+++ b/psn-store/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,17 @@
-<p>menu-bar works!</p>
+<div class="menu-bar__container">
+	<div class="menu-bar__logo">
+		<img
+		src="assets/ps-logo.png"
+		width="140px"
+		height="32px"
+		alt="playstation logo"
+		srcset="">
+	</div>
+	<div class="menu-bar__item">
+		<ul>
+			<li><a href="https://www.linkedin.com/in/joana-de-angeles" target="_blank">Linkedin</a></li>
+			<li><a href="https://github.com/joana-de-angeles" target="_blank">Github</a></li>
+			<li><a href="https://www.instagram.com/joana_d_angeles/" target="_blank">Instagram</a></li>
+		</ul>
+	</div>
+</div>
