--- a/psn-store/src/app/pages/home/home.component.html
+++ b/psn-store/src/app/pages/home/home.component.html
@@ -1,1 +1,41 @@
-<p>home works!</p>
+<div class="home__container">
+	<app-card
+		gameCover="assets/GOD.jpg"
+		gameLabel="exclusive"
+		gameType="disc | ps5"
+		gamePrice="R$ 389,99"
+	></app-card>
+	<app-card
+		gameCover="assets/acValh.jpg"
+		gameLabel="digital"
+		gameType="digital | ps4 | ps5"
+		gamePrice="R$ 279,99"
+	></app-card>
+	<app-card
+		gameCover="assets/horizonZero.jpeg"
+		gameLabel="exclusive"
+		gameType="digital | ps4"
+		gamePrice="R$ 149,99"
+	></app-card>
+	<app-card
+		gameCover="assets/horizonForb.jpeg"
+		gameLabel="exclusive"
+		gameType="disc | ps4 | ps5"
+		gamePrice="R$ 269,99"
+	></app-card>
+	<app-card
+		gameCover="assets/RDR2.jpg"
+		gameLabel="digital"
+		gameType="digital | ps4 | ps5"
+		gamePrice="R$ 289,99"
+	></app-card>
+	<app-card
+		gameCover="assets/TLOU2.1.jpg"
+		gameLabel="exclusive"
+		gameType="disc | ps4 | ps5"
+		gamePrice="R$ 329,99"
+	></app-card>
+
+
+</div>
+
